# vscode-salt

./: .env.example  .gitignore  .vscodeignore  Cargo.toml  README.md  esbuild.mjs  package-lock.json  package.json  tsconfig.json
assets/forms/: allOrPublic.html  consentform.html  qualtrics_survey.html  rustquizform_v6.html  survey.html  thankyoumessage.html
crates/salt/: Cargo.toml  rust-toolchain.toml
crates/salt_ide/: Cargo.toml  README.md  rust-toolchain.toml
crates/salt_ide/example-crate/: Cargo.toml
crates/salt_ide/example-crate/src/: lib.rs
crates/salt_ide/src/: lib.rs
crates/salt_ide/src/plugin/: mod.rs  print_exprs.rs  print_result.rs  visit_hir.rs  walk_exprs.rs
crates/salt_ide/src/plugin/tests/: mod.rs  test_utils.rs
crates/salt_ide/src/plugin/tests/unit_tests/: Cargo.toml
crates/salt_ide/src/plugin/tests/unit_tests/src/: main.rs  other.rs
crates/salt_ide/src/tests/: tests.rs
crates/salt_ide/src/tests/unit_tests/: impl_closure.rs
crates/test-crate/: Cargo.toml
src/: declarations.d.ts  errorviz.ts  extension.ts  forms.ts  logging.ts  logging_utils.ts  patterns.ts  printRust.ts  remotes.ts  telemetry.ts  telemetry_aws.ts  util.ts  visualizations.ts  webviews.ts
src/forms/: allOrPublic.html  consentform.html  consentformCopy.html  index.ts  rustquizform.html  rustquizform_v2.html  rustquizform_v3.html  rustquizform_v4.html  rustquizform_v5.html  rustquizform_v6.html  survey.html  test.html  thankyoumessage.html
src/interventions/: index.ts
src/utils/: log.ts  math.ts  vis.ts
unit-test/: matching.js  matching.js.map  matching.ts
(+30 files in other folders)
