[package]
name = "salt_ide"
version = "0.1.0"
edition = "2024"

[package.metadata.rust-analyzer]
rustc_private = true

[dependencies]
rustc_plugin = { workspace = true }
rustc_utils = { workspace = true }

serde = {version = "1", features = ["derive"]}
serde_json = "1.0"

# binaries
env_logger = "0.10"
clap = {version = "4.4", features = ["derive"]}
